добавляет оформление формы в футере

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                                 <input type="checkbox" name="contract" class="check-input">
                                 <svg width="16" height="15" class="check-icon">
                                     <use xlink:href="./images/icons.svg#icon-check"></use></svg>
-                                <span class="check-box"></span>Соглашаюсь с рассылкой и принимаю <a href="" class="conditions"> Условия договора</a>
+                                <span class="check-box"></span>
+                                <span>Соглашаюсь с рассылкой и принимаю <a href="" class="conditions">Условия договора</a></span>
                             </label>
                             
                             <button type="submit" class="submit-button">Отправить</button>
@@ -309,8 +310,8 @@
                     </ul>
                 </address>
                 <section class="join">
-                    <h3>присоединяйтесь</h3>
-                    <ul class="social-media">
+                    <h3 class="join-us">присоединяйтесь</h3>
+                    <ul class="join-media">
                         <li><a href="#" class="media-area">
                                 <svg class="media">
                                     <use xlink:href="./images/icons.svg#icon-instagram"></use>
@@ -329,6 +330,17 @@
                                 </svg></a>
                         </li>
                     </ul>
+                </section>
+                <section class="subscribe">
+                    <h3 class="join-us">Подпишитесь на рассылку</h3>
+                    <form class="subscribe-form">
+                        <label class="subscribe-label">
+                            <input type="email" name="mail" placeholder="E-mail" class="subscribe-input">   
+                        </label>
+                        <button type="submit" class="subscribe-button">Подписаться<svg width="24" height="24" class="subscribe-icon">
+                            <use xlink:href="./images/icons.svg#icon-send"></use>
+                        </svg></button>
+                    </form>
                 </section>
             </div>
         </div>
