--- a/portfolio.html
+++ b/portfolio.html
@@ -220,8 +220,8 @@
                 </ul>
             </address>
             <section class="join">
-                <h3>присоединяйтесь</h3>
-                <ul class="social-media">
+                <h3 class="join-us">присоединяйтесь</h3>
+                <ul class="join-media">
                     <li><a href="#" class="media-area">
                             <svg class="media">
                                 <use xlink:href="./images/icons.svg#icon-instagram"></use>
@@ -240,6 +240,17 @@
                             </svg></a>
                     </li>
                 </ul>
+            </section>
+            <section class="subscribe">
+                <h3 class="join-us">Подпишитесь на рассылку</h3>
+                <form class="subscribe-form">
+                    <label class="subscribe-label">
+                        <input type="email" name="mail" placeholder="E-mail" class="subscribe-input">
+                    </label>
+                    <button type="submit" class="subscribe-button">Подписаться<svg width="24" height="24" class="subscribe-icon">
+                            <use xlink:href="./images/icons.svg#icon-send"></use>
+                        </svg></button>
+                </form>
             </section>
         </div>
     </div>
